# giarecon

./: CLAUDE.md
.claude/: settings.local.json
Requirement/: GIA_Proposal_Benow_1.docx  ReconBackendAPIsCopy.postman_collection.json
Requirement/Recon/Recon Test Files/10 Rows file/: BenowFile.xlsx  Brand.xlsx
Requirement/Recon/Recon Test Files/70K Rows/: Benow File 1.xlsb  Brand 1.xlsx
SourceCode/MCP/MAIL_WHATSPAPP/: .gitignore  LICENSE  README.md
SourceCode/MCP/MAIL_WHATSPAPP/email-bridge/: README.md  go.mod
SourceCode/MCP/MAIL_WHATSPAPP/email-mcp-server/: README.md  email_tools.py  main.py  mcp_tools.py  pyproject.toml
SourceCode/MCP/MAIL_WHATSPAPP/email-mcp-server/scripts/: build.bat  build.sh
SourceCode/MCP/RECON_SERVER/recon-mcp-server/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  recon_api.py
SourceCode/MCP/RECON_SERVER/recon-mcp-server/scripts/: build.ps1
SourceCode/frontend/: BENOW_REBRAND_SUMMARY.md  BUILD_GUIDE.md  BUILD_PRODUCTION.ps1  BUILD_QUICK.ps1  BUILD_README.md  CHANGES_SUMMARY.md  CHECK_REMAINING_ISSUES.ps1  CLEAR_CACHE_ONLY.ps1  FAVICON_SETUP.md  FINAL_FIX_SUMMARY.md  FIX_VITE_CACHE.ps1  IMPORT_FIXES.md  README.md  SETUP_FAVICON.ps1  TROUBLESHOOTING.md  VERIFY_BUILD.ps1  VERIFY_FIX.ps1  VERIFY_REBRAND.ps1  WHATSAPP_REMOVAL_SUMMARY.md  clear-cache.ps1  components.json  diagnose.ps1  index.html  package-lock.json  package.json  restart-dev.ps1  tailwind.config.ts  test-imports.ts  vite.config.ts
SourceCode/frontend/src/: App.tsx  main.tsx
SourceCode/frontend/src/app/: Router.tsx
(+119 files in other folders)
